--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "e123",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/Nargot1/E123.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jakub Witkowski",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nargot1/E123/issues"
